--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,16 +26,17 @@ dependencies:
   path: ^1.8.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  cloud_firestore: ^5.6.7
-  firebase_core: ^3.4.0
-  firebase_auth: ^5.5.3
-  firebase_analytics: ^11.4.5
+  intl: ">=0.19.0 <0.22.0"
+  firebase_core: ">=3.4.0 <5.0.0"
+  firebase_auth: ">=5.5.3 <6.0.0"
+  cloud_firestore: ">=5.6.7 <6.0.0"
+  firebase_analytics: ">=11.4.5 <12.0.0"
   provider: ^6.1.1
   intl: ^0.20.2
   flutter_localizations:
     sdk: flutter
   encrypt: ^5.0.3
-  crypto: ^3.0.3
+  crypto: ">=3.0.3 <4.0.0"
 
 dev_dependencies:
   flutter_test:
